 - Sound Effect for button press and release;
 - Enabled keyboard for dialog option selection;
 - Script to control chicken idle behaviour;
 - Campaign abstractions to allow more easy engine customization;
 - Initial Script for default campaign;
 - dntMapEditor: Some improvements to wall editor;
 - Implemented area affect talents;
 - Option to always highlight map connections;

BugFixes:
 - heightmap2dnt: Fixed a missing include;
 - bumpMapping: Changed shader to suppor not so recent 
                video cards (Geforce 6 series);
 - ./configure: Restricted SDL_ttf to >= 2.0.10;
 - sound: Fixed a bug that won't play files with size lesser 
          or equal to  single buffer;
 - dialogWindow: Fixed a bug that open the window before mouse
                 button release, automatically selecting a dialog
                 option sometimes;
 - Removed collision with dead characters to avoid potential path block;
 - dntPartEditor: added mouse cursor render;
 - dntPartEditor: fixed a bug on current particle counter and elements menu;
 - OSX: fixed character portrait draw on game screen;

================================================
|                Version 0.9                   |
|            Released: 2012-05-26              |
================================================
 - gui: rolBar can use position button to scroll text;
 - gui: button type: KEEP_PRESSING for buttons that will
        remain pressed until mouse is released, ignoring
		  if inner the button area;
 - Setting delta to sceneNode minY when lesser than 0;
 - script: new functions: callAnimation, setAnimation, playSound;
 - New script to controll cattle idle behaviour;
 - New script to controll beggars idle behaviour;
 - Added support to idtech4 (.md5*) models and animations;
 - 3D messages could be static on Y axis;
 - Lots of adjusts and fixes to the A* implementation;
 - Disabling vsync via OpenGL for better perfomance in OSX;
 - Verifying sight when NPC selecting target enemy and when 